# ChangeLog for dev-libs/cyrus-imap-dev
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-imap-dev/ChangeLog,v 1.87 2012/08/06 18:05:43 eras Exp $

  06 Aug 2012; Eray Aslan <eras@gentoo.org> cyrus-imap-dev-2.4.16.ebuild:
  sign

  06 Aug 2012; Eray Aslan <eras@gentoo.org> -cyrus-imap-dev-2.4.12.ebuild,
  -cyrus-imap-dev-2.4.13.ebuild, -cyrus-imap-dev-2.4.14.ebuild:
  Remove old

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> cyrus-imap-dev-2.4.12.ebuild,
  cyrus-imap-dev-2.4.13.ebuild, cyrus-imap-dev-2.4.14.ebuild,
  cyrus-imap-dev-2.4.16.ebuild:
  Drop sparc keywords

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  cyrus-imap-dev-2.4.16.ebuild:
  x86 stable wrt bug #418739

  07 Jun 2012; Brent Baude <ranger@gentoo.org> cyrus-imap-dev-2.4.16.ebuild:
  Marking cyrus-imap-dev-2.4.16 ppc for bug 418739

  05 Jun 2012; Brent Baude <ranger@gentoo.org> cyrus-imap-dev-2.4.16.ebuild:
  Marking cyrus-imap-dev-2.4.16 ppc64 for bug 418739

  02 Jun 2012; Agostino Sarubbo <ago@gentoo.org> cyrus-imap-dev-2.4.16.ebuild:
  Stable for amd64, wrt bug #418739

*cyrus-imap-dev-2.4.16 (19 Apr 2012)

  19 Apr 2012; Eray Aslan <eras@gentoo.org> +cyrus-imap-dev-2.4.16.ebuild:
  version bump

*cyrus-imap-dev-2.4.14 (12 Mar 2012)

  12 Mar 2012; Eray Aslan <eras@gentoo.org> +cyrus-imap-dev-2.4.14.ebuild:
  version bump

  04 Mar 2012; Eray Aslan <eras@gentoo.org> -cyrus-imap-dev-2.3.14.ebuild,
  -cyrus-imap-dev-2.3.15.ebuild, -cyrus-imap-dev-2.3.16.ebuild,
  -files/cyrus-imapd-2.3.16+db-5.0.patch, -cyrus-imap-dev-2.4.8.ebuild,
  -cyrus-imap-dev-2.4.9.ebuild, -cyrus-imap-dev-2.4.10.ebuild,
  -cyrus-imap-dev-2.4.11.ebuild, -files/cyrus-imapd-libwrap.patch:
  remove old

  02 Mar 2012; Brent Baude <ranger@gentoo.org> cyrus-imap-dev-2.4.12.ebuild:
  Marking cyrus-imap-dev-2.4.12 ppc64 for bug 388341

  04 Jan 2012; Brent Baude <ranger@gentoo.org> cyrus-imap-dev-2.4.12.ebuild: