@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST cyrus-imapd-2.4.16.tar.gz 2484201 SHA256 beac9d6059680bbf65948db60a30c6e8f59786df4a7821c70dc27b2a225f32c4 SHA512 31931e94ebe869516f10886cee5ab152fb6d6376bf009250718077732c6172a6430f3502370e15e94f6165500e5b4108623bceea7c0dcfb3eb746e9ff0fcffab WHIRLPOOL 1e9916d03448e7f036aa6320af69a7ae57ae37205f98d4cfee8c335d9dcdc1c09ba243f4506036da4ca17f859f5c7eef0cb56443dfe51ad3075f0e4d62874fcb
+DIST cyrus-imapd-2.4.17.tar.gz 2486355 SHA256 b3e30052c764ee7163947ffde27bdd58bd4dd2e5697ad144491941e46300a583 SHA512 86ffe1664ca3c3df164ed8fca21cc08ddae12380e1485deccec7da4ec263d8b953a806e05f0b10f6fb7717a0d40fc05669792b77cc66d7c5067061c8506e59ee WHIRLPOOL 22566578217a5901793b886ff020aa1deecbb81bf85f54a524b58de129029e51b0aa358db902a2139584d05f668404cb98ca2ff3fa33803ce986e07b95c69c45
 EBUILD cyrus-imap-dev-2.4.16.ebuild 1640 SHA256 e127af8c763b6e7f550951d2e0a6bc57af1d145be685881275fe02da8576d435 SHA512 6d5e4925358e9b629d40689445b3b0602761ececf24aca0811752727449faf16b80bf0094cc1e7c2ee91f300e69dcc04eb95d22fb5cb1f9338fd00f4508eff2c WHIRLPOOL 3bfe61c2ddcdeeb87bf171a22af0fa8881d4f256e575c0a2a001e52afebdcb837ac70ee29b2117ab0d74a5c54f85713fe320e7c3cd8de238e2792ae0b855a34c
-MISC ChangeLog 12751 SHA256 7d6736ee22e92095f114ec0ba6d0bf33748c0f851760647d6f8fcec0e54c28e8 SHA512 ba762cee1bf18bd9bdb0802820110f7c163353d34894caa4f12e2527eb5d2141a1bca5a32196d16bcdfb4ddd3ac936bdf398925a2acfd2d008f57f4cabc0f84b WHIRLPOOL 1b104a4bfcae8bb33f4c14caf14d3a1f94329e74590bd4e8e2d8d3fe47818edab7188c5cdb2760845f3cd11ebf1d5b0208b2bb5f97d80356e5466104de93a1db
+EBUILD cyrus-imap-dev-2.4.17.ebuild 1641 SHA256 2c5294f7e2f32ee75489976ce69692b799bae2f7ecc1e15f13aa7453e25baf68 SHA512 09ec72359f9080f7faee99f4c72bc983796434f585c0ce31c24776411229ceedf12db9c47412087e555db8e830d71824d74d937278f9a397260a36f1a822dbec WHIRLPOOL a90c6503365506f4ee3bb5e322e356dfbe75544dd0369bdc84d146eef369f06d0fc55b104eda7bd87501d76722d1bbe77b4062d6652b90e0f2cdc7b8395532f3
+MISC ChangeLog 12880 SHA256 d86dca7d7483c334a89180c38b4104ddc39974fb225ed3a53ad39374fcb9197b SHA512 b298c44fe64a0895257cb8018638863e26b582010469787859330ba3b0d737343d9993b7d4c2074c865f1d60de827e1a4160c1777cf7a3196bc10fe532850f6e WHIRLPOOL 44b1f10cb82487ff392f434c7d4d06f245426eeabb3072afeef8d146851faaf9111b1511fdcbef2062a8a5ec86384d9e1b2d83cb63dc2546d1c6846b8d7620e9
 MISC metadata.xml 161 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32 SHA512 77001eed8032a3b919c30d8dd9314951d3471528e770ef5ad840060e217037f5e1f0eb2cf4c5f90cb2d58e9598c8a38619a1301f890d6dd734900ab6273fb6ec WHIRLPOOL 0d251627fdbf63b5c090313d5bbf3e45acf630331742dc930a0136cc382b7720fe4099c64fd439fd31fe0eed48a4199d6e31692dbdedd34f803f9e2567d46975
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQIAeGAAoJEHfx8XVYajsfUGMQALHVeqL+w1YU0b0klUlnxrO/
-bYZumUE2Q5CIKX42zkNTX41Pb2i25y9fmNcA/wu6lrAXcSsn3pfgwc2aftYYi26c
-1ltkuiuAubhAlDkH8/gru78LLhCSqKNTFWDq23rzn9eupgOgnhhq1rg7aZKgKQPH
-y46ysVw5a/U4wFuspBgQ0f5VSSt37qDKKX0VvgBDm5VO/HItlsR7KAawwaSZTj9x
-Rgi68xrRQ6OVor6nKaEyVwdIdiCW4DuL1rynpQiKFRhVFakxsFoMJDwdlNEBnERa
-3T3BqKxifJhY7TQlGgLwMzLO0NIkoENMqY8zh5DBH2SyYa20qsEkcJXXn9iXS5Z2
-AN9X1Cqn6EBhATzRGNn9OQvMqktyHmQK1lx3ACd+qWj/4bmmyaiHCon/Sm9IkOcR
-vAoNVDUbDHo00t7O6vp8stBjLo5WPm42xqMMUJBhMgXsSDOWuSx8DjE+bXcWFYm5
-NaN3hG42RHJ3jfni2c2+757VpFGMY1j+nvY+vBb6ywzCX/c6daQ4xR7iVFMGJiVA
-bz4IlVKCz1eEh+GDFlQ7EuiuVcb88RK8P3IP9XB4tqBsJMcHHMxeSuevjWT35xko
-0RZAsko6UmhJvp4nBoS6IbydPSfdXB+i2Mpl8gnN9KcmxlUlYpBSEHfHFMZwMlTS
-kugfFrhe/2Hzb3B81dtv
-=d1JP
+iQIcBAEBCAAGBQJQwKXvAAoJEHfx8XVYajsfU9IQAKieQU1aMXPfAV1i10j+ZfsE
+/TdF9PKsYLdFE4a3NI+BTI501EXMTK552pDu0xYTm8Jm03Fo7cqseRVZb96i7eSi
+V5VJ5JWIJxWYJHagCJr4tSV6cPV2SCHaKLCUjF6sqW6kjStgXSNdyhl8gFMwk7j3
+vGy0Wjz4M+IMvEV52i4yjrhPHq+j65NP9czV28VTigZDzM+UDJO3GVRQaBHpz0FW
+OVJVDPE5u/8fyj8Dnknq+C07jw6VD8Qxx42ekGHur+N3ZQxxFph2fVysZ6PTZ5VK
+gvC5QMmzp2I7myN4LMKspXG6kdLH36pyurJRKRJoZLrmETfFewNMddoA5a3mRMX5
+aoWzGsEGXyAIjGs+VZhi2TLRLj3qFeMpNc7A7+4V3ZgcxTsBwe2oq+UVzfzIcWX6
+hmQXYwYmedRpKZTo2IQXfIRxMW2cNpr3nFwZ1JyveYFZpGQU9sZVGQVqoKFneZj0
+9Y8rJzOekPeiy83ZMI57ClpBTNJ9HYtk89xioQpk+uSlj3almmz2rwzQoRrsHh1p
+OUvGbijkZ5dyBQpoXk8f/GarxyyKrnM8Jqj3HXRsV7/zJb3/tScVKZrid3LGJxdo
+ffJaCY2LsRNkKaLns/FaBzx9WmeGPKA4mShYxRSKIyIBxp/9DjN4SAkpHgnzyHdI
+9367aKi3qdpJ+kxi14dJ
+=+w/g
 -----END PGP SIGNATURE-----
