@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/cyrus-imap-dev
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-imap-dev/ChangeLog,v 1.87 2012/08/06 18:05:43 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-imap-dev/ChangeLog,v 1.88 2012/12/06 14:04:29 eras Exp $
+
+*cyrus-imap-dev-2.4.17 (06 Dec 2012)
+
+  06 Dec 2012; Eray Aslan <eras@gentoo.org> +cyrus-imap-dev-2.4.17.ebuild:
+  Version bump
 
   06 Aug 2012; Eray Aslan <eras@gentoo.org> cyrus-imap-dev-2.4.16.ebuild:
   sign
